# slackbot

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
commands/: actions.md  analysis.md  backfill.md  daily.md  schedule.md
docs/: slack-app-setup.md
scripts/: bump-version.sh
skills/slack-actions/: SKILL.md
skills/slack-analysis/: SKILL.md
skills/slack-daily/: SKILL.md
src/slack_mcp/: app.py  server.py  tools.py
